kuber/kuberyaml/eagle_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eagle-back
  namespace: default
spec:
  selector:
    matchLabels:
      run: eagle-back
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        run: eagle-back
    spec:
      containers:
      - name: eagle-back
        image: eypk9673/eagle-back:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: eagle-back
  labels:
    run: eagle-back
spec:
  type: NodePort
  selector:
    run: eagle-back
  ports:
  - port: 4000
    targetPort: 4000
    nodePort: 32400
    protocol: TCP
