kuber/kuberyaml/sample_front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-front
  namespace: default
spec:
  selector:
    matchLabels:
      run: web-front
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        run: web-front
    spec:
      containers:
      - name: web-front
        image: eypk9673/eagle-web-front:40
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eagle-front
  labels:
    run: web-front
spec:
  type: NodePort
  selector:
    run: web-front
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32429
    protocol: TCP
